@@ -2,7 +2,7 @@
  * (C) Copyright 2007-2009 Michal Simek
  * Michal SIMEK <monstr@monstr.eu>
  *
- * (C) Copyright 2010 Li-Pro.Net
+ * (C) Copyright 2010-2011 Li-Pro.Net
  * Stephan Linz <linz@li-pro.net>
  *
  * This program is free software; you can redistribute it and/or
@@ -90,6 +90,4 @@
 #define XILINX_LLTEMAC                          
 #define XILINX_LLTEMAC_BASEADDR                  0x88F00000
 #define XILINX_LLTEMAC_SDMA_CTRL_BASEADDR        0x8adf0180
-
-/* S2I GigE Vision Ethernet MAC not defined */
 
