@@ -1,0 +1,1 @@
+xlbsp/Kconfig.auto
